
* If there was an error creating a topic, the selected project name
  was not retained when the create topic screen was redisplayed.  This
  has now been fixed.
  Submitted by Edwin Fine <edwin.m.fine@verizon.com>.

* If there is a problem when a comment is created, the error message
  will correctly display in the AJAX'ed window.  An example here is if
  $mailhost is incorrectly configured.

* Fixed problem with Subversion repositories on Win32, where
  Codestriker was unable to launch the svn program.

* Comments containing '+' characters were changed into ' ' characters
  when posted via AJAX.  Other potentially damaging characters are now
  escaped.

* Comments with '\' characters are now displayed correctly in all
  cases within the tooltip window.

* Temporary files were not being deleted within the
  CodestrikerClient.pm module (used for auto-creation of topics on CVS
  commits).  Reported by Martin Apel <Martin.Apel@softlab.de>.

Version 1.9.1

* Correct problem introduced in 1.9.0 release where the email address
  field in the add comment tooltip was not being stored correctly in
  the Codestriker cookie.  For reviewers who have never created a
  Codestriker topic, the email field not remember the previous value.
  This has now been corrected.

* When adding a comment via a link from an email, the confirmation
  screen now contains links to the topic text and topic comments, for
  convenience.

Version 1.9.0

* Now using overlib javascript library
  (http://www.bosrup.com/web/overlib) for formatted "tooltips".  When
  the mouse hovers over a line where a comment has been made, a
  formatted "tooltip" window appears, which contains the comment text
  formatted appropriately, with author and date header information
  bolded.  The tooltip is not removed until the mouse is moved off the
  line.  Help text on the create topic and search screens have been
  modified to use this tooltip library as well as opposed to
  javascript alert windows.
