@@ -3,6 +3,12 @@
 [% PROCESS header.html.tmpl version = version displaymenu = 1 
                             closehead = 1 help="" %]
 
+[%# Display any "feedback" to the user if necessary. #%]
+[% IF feedback != '' %]
+    <font color="red">[% feedback %]</font>
+    <p>
+[% END %]
+
 <H2>Topic created</H2>
 Topic title: [% topic_title | html_entity %]<BR>
 Author: [% email | html_entity %]<BR>
